tests/snapshots/ortho_config_metadata_snapshot_tests__release_help_documentation_metadata_is_stable.snap
---
source: tests/ortho_config_metadata_snapshot_tests.rs
assertion_line: 143
expression: metadata_snapshot()
---
ir_version: "1.1"
precedence:
  - Defaults
  - File
  - Env
  - Cli
discovery: ~
fields:
  - name: file
    help_id: cli.flag.file.help
    cli:
      long: file
      short: f
      multiple: false
      possible_values: []
    environment: NETSUKE_FILE
    file: file
    merge_strategy: replace
  - name: jobs
    help_id: cli.flag.jobs.help
    cli:
      long: jobs
      short: j
      multiple: false
      possible_values: []
    environment: NETSUKE_JOBS
    file: jobs
    merge_strategy: replace
  - name: verbose
    help_id: cli.flag.verbose.help
    cli:
      long: verbose
      short: v
      multiple: false
      possible_values: []
    environment: NETSUKE_VERBOSE
    file: verbose
    merge_strategy: replace
  - name: locale
    help_id: cli.flag.locale.help
    cli:
      long: locale
      short: l
      multiple: false
      possible_values: []
    environment: NETSUKE_LOCALE
    file: locale
    merge_strategy: replace
  - name: fetch_allow_scheme
    help_id: cli.flag.fetch_allow_scheme.help
    cli:
      long: fetch-allow-scheme
      short: F
      multiple: true
      possible_values: []
    environment: NETSUKE_FETCH_ALLOW_SCHEME
    file: fetch_allow_scheme
    merge_strategy: append
  - name: env_allow_var
    help_id: cli.flag.env_allow_var.help
    cli:
      long: env-allow-var
      short: e
      multiple: true
      possible_values: []
    environment: NETSUKE_ENV_ALLOW_VAR
    file: env_allow_var
    merge_strategy: append
  - name: env_block_var
    help_id: cli.flag.env_block_var.help
    cli:
      long: env-block-var
      short: E
      multiple: true
      possible_values: []
    environment: NETSUKE_ENV_BLOCK_VAR
    file: env_block_var
    merge_strategy: append
  - name: fetch_allow_host
    help_id: cli.flag.fetch_allow_host.help
    cli:
      long: fetch-allow-host
      short: t
      multiple: true
      possible_values: []
    environment: NETSUKE_FETCH_ALLOW_HOST
    file: fetch_allow_host
    merge_strategy: append
  - name: fetch_block_host
    help_id: cli.flag.fetch_block_host.help
    cli:
      long: fetch-block-host
      short: T
      multiple: true
      possible_values: []
    environment: NETSUKE_FETCH_BLOCK_HOST
    file: fetch_block_host
    merge_strategy: append
  - name: fetch_default_deny
    help_id: cli.flag.fetch_default_deny.help
    cli:
      long: fetch-default-deny
      short: c
      multiple: false
      possible_values: []
    environment: NETSUKE_FETCH_DEFAULT_DENY
    file: fetch_default_deny
    merge_strategy: replace
  - name: trust_project_fetch_policy
    help_id: cli.flag.trust_project_fetch_policy.help
    cli:
      long: trust-project-fetch-policy
      short: r
      multiple: false
      possible_values: []
    environment: NETSUKE_TRUST_PROJECT_FETCH_POLICY
    file: trust_project_fetch_policy
    merge_strategy: replace
  - name: manifest_evaluation_fuel
    help_id: cli.flag.manifest_evaluation_fuel.help
    cli:
      long: manifest-evaluation-fuel
      short: m
      multiple: false
      possible_values: []
    environment: NETSUKE_MANIFEST_EVALUATION_FUEL
    file: manifest_evaluation_fuel
    merge_strategy: replace
  - name: manifest_fuel
    help_id: cli.flag.manifest_fuel.help
    cli:
      long: manifest-fuel
      short: M
      multiple: false
      possible_values: []
    environment: NETSUKE_MANIFEST_FUEL
    file: manifest_fuel
    merge_strategy: replace
  - name: manifest_rendered_value_bytes
    help_id: cli.flag.manifest_rendered_value_bytes.help
    cli:
      long: manifest-rendered-value-bytes
      short: a
      multiple: false
      possible_values: []
    environment: NETSUKE_MANIFEST_RENDERED_VALUE_BYTES
    file: manifest_rendered_value_bytes
    merge_strategy: replace
  - name: manifest_rendered_manifest_bytes
    help_id: cli.flag.manifest_rendered_manifest_bytes.help
    cli:
      long: manifest-rendered-manifest-bytes
      short: A
      multiple: false
      possible_values: []
    environment: NETSUKE_MANIFEST_RENDERED_MANIFEST_BYTES
    file: manifest_rendered_manifest_bytes
    merge_strategy: replace
  - name: manifest_source_bytes
    help_id: cli.flag.manifest_source_bytes.help
    cli:
      long: manifest-source-bytes
      short: n
      multiple: false
      possible_values: []
    environment: NETSUKE_MANIFEST_SOURCE_BYTES
    file: manifest_source_bytes
    merge_strategy: replace
  - name: manifest_foreach_cardinality
    help_id: cli.flag.manifest_foreach_cardinality.help
    cli:
      long: manifest-foreach-cardinality
      short: N
      multiple: false
      possible_values: []
    environment: NETSUKE_MANIFEST_FOREACH_CARDINALITY
    file: manifest_foreach_cardinality
    merge_strategy: replace
  - name: manifest_expanded_entries
    help_id: cli.flag.manifest_expanded_entries.help
    cli:
      long: manifest-expanded-entries
      short: i
      multiple: false
      possible_values: []
    environment: NETSUKE_MANIFEST_EXPANDED_ENTRIES
    file: manifest_expanded_entries
    merge_strategy: replace
  - name: json
    help_id: cli.flag.json.help
    cli:
      long: json
      short: J
      multiple: false
      possible_values: []
    environment: NETSUKE_JSON
    file: json
    merge_strategy: replace
  - name: no_input
    help_id: cli.flag.no_input.help
    cli: ~
    environment: NETSUKE_NO_INPUT
    file: no_input
    merge_strategy: replace
  - name: color
    help_id: cli.flag.color.help
    cli: ~
    environment: NETSUKE_COLOR
    file: color
    merge_strategy: replace
  - name: emoji
    help_id: cli.flag.emoji.help
    cli: ~
    environment: NETSUKE_EMOJI
    file: emoji
    merge_strategy: replace
  - name: progress
    help_id: cli.flag.progress.help
    cli: ~
    environment: NETSUKE_PROGRESS
    file: progress
    merge_strategy: replace
  - name: accessibility
    help_id: cli.flag.accessibility.help
    cli: ~
    environment: NETSUKE_ACCESSIBILITY
    file: accessibility
    merge_strategy: replace
  - name: default_targets
    help_id: cli.flag.default_targets.help
    cli:
      long: default-targets
      short: d
      multiple: true
      possible_values: []
    environment: NETSUKE_DEFAULT_TARGETS
    file: default_targets
    merge_strategy: append
  - name: directory
    help_id: cli.flag.directory.help
    cli:
      long: directory
      short: C
      multiple: false
      possible_values: []
    environment: ~
    file: ~
    merge_strategy: replace
  - name: config
    help_id: cli.flag.config.help
    cli:
      long: config
      short: ~
      multiple: false
      possible_values: []
    environment: ~
    file: ~
    merge_strategy: replace
subcommands:
  - name: build
    about_id: cli.subcommand.build.about
  - name: clean
    about_id: cli.subcommand.clean.about
  - name: graph
    about_id: cli.subcommand.graph.about
  - name: generate
    about_id: cli.subcommand.generate.about
  - name: help
    about_id: cli.subcommand.help.long_about
